lib/core/api/Ximu3.h

typedef enum XIMU3_ConnectionType
{
    XIMU3_ConnectionTypeUsb,
    XIMU3_ConnectionTypeSerial,
    XIMU3_ConnectionTypeTcp,
    XIMU3_ConnectionTypeUdp,
    XIMU3_ConnectionTypeBluetooth,
    XIMU3_ConnectionTypeFile,
} XIMU3_ConnectionType;
typedef enum XIMU3_Result
{
    XIMU3_ResultOk,
    XIMU3_ResultError,
} XIMU3_Result;
typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_DataLogger XIMU3_DataLogger;
typedef struct XIMU3_UsbConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_UsbConnectionInfo;
typedef struct XIMU3_SerialConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
    uint32_t baud_rate;
    bool rts_cts_enabled;
} XIMU3_SerialConnectionInfo;
typedef struct XIMU3_TcpConnectionInfo
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t port;
} XIMU3_TcpConnectionInfo;
typedef struct XIMU3_UdpConnectionInfo
{
    char ip_address[XIMU3_CHAR_ARRAY_SIZE];
    uint16_t send_port;
    uint16_t receive_port;
} XIMU3_UdpConnectionInfo;
typedef struct XIMU3_BluetoothConnectionInfo
{
    char port_name[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_BluetoothConnectionInfo;
typedef struct XIMU3_FileConnectionInfo
{
    char file_path[XIMU3_CHAR_ARRAY_SIZE];
} XIMU3_FileConnectionInfo;
typedef struct XIMU3_InertialMessage
{
    uint64_t timestamp;
    float gyroscope_x;
    float gyroscope_y;
    float gyroscope_z;
    float accelerometer_x;
    float accelerometer_y;
    float accelerometer_z;
} XIMU3_InertialMessage;
typedef struct XIMU3_MagnetometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_MagnetometerMessage;
typedef struct XIMU3_QuaternionMessage
{
    uint64_t timestamp;
    float w;
    float x;
    float y;
    float z;
} XIMU3_QuaternionMessage;
typedef struct XIMU3_RotationMatrixMessage
{
    uint64_t timestamp;
    float xx;
    float xy;
    float xz;
    float yx;
    float yy;
    float yz;
    float zx;
    float zy;
    float zz;
} XIMU3_RotationMatrixMessage;
typedef struct XIMU3_EulerAnglesMessage
{
    uint64_t timestamp;
    float roll;
    float pitch;
    float yaw;
} XIMU3_EulerAnglesMessage;
typedef struct XIMU3_LinearAccelerationMessage
{
    uint64_t timestamp;
    float quaternion_w;
    float quaternion_x;
    float quaternion_y;
    float quaternion_z;
    float acceleration_x;
    float acceleration_y;
    float acceleration_z;
} XIMU3_LinearAccelerationMessage;
uint64_t XIMU3_connection_add_end_of_file_callback(struct XIMU3_Connection *connection, void (*callback)(void *context), void *context);
void XIMU3_connection_remove_callback(struct XIMU3_Connection *connection, uint64_t callback_id);
const char *XIMU3_usb_connection_info_to_string(struct XIMU3_UsbConnectionInfo connection_info);
const char *XIMU3_serial_connection_info_to_string(struct XIMU3_SerialConnectionInfo connection_info);
const char *XIMU3_tcp_connection_info_to_string(struct XIMU3_TcpConnectionInfo connection_info);
const char *XIMU3_udp_connection_info_to_string(struct XIMU3_UdpConnectionInfo connection_info);
const char *XIMU3_bluetooth_connection_info_to_string(struct XIMU3_BluetoothConnectionInfo connection_info);
const char *XIMU3_file_connection_info_to_string(struct XIMU3_FileConnectionInfo connection_info);
const char *XIMU3_connection_type_to_string(enum XIMU3_ConnectionType connection_type);
struct XIMU3_DataLogger *XIMU3_data_logger_new(const char *destination, const char *name, struct XIMU3_Connection *const *connections, uint32_t length);
void XIMU3_data_logger_free(struct XIMU3_DataLogger *data_logger);
enum XIMU3_Result XIMU3_data_logger_get_result(struct XIMU3_DataLogger *data_logger);
enum XIMU3_Result XIMU3_data_logger_log(const char *destination, const char *name, struct XIMU3_Connection *const *connections, uint32_t length, uint32_t seconds);
const char *XIMU3_inertial_message_to_string(struct XIMU3_InertialMessage message);
const char *XIMU3_magnetometer_message_to_string(struct XIMU3_MagnetometerMessage message);
const char *XIMU3_quaternion_message_to_string(struct XIMU3_QuaternionMessage message);
const char *XIMU3_rotation_matrix_message_to_string(struct XIMU3_RotationMatrixMessage message);
const char *XIMU3_euler_angles_message_to_string(struct XIMU3_EulerAnglesMessage message);
const char *XIMU3_linear_acceleration_message_to_string(struct XIMU3_LinearAccelerationMessage message);