lib/core/api/ximu3_bindings.g.dart


  int XIMU3_connection_add_end_of_file_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    ffi.Pointer<
            ffi
            .NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void> context)>>
        callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_end_of_file_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_end_of_file_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<XIMU3_Connection>,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(ffi.Pointer<ffi.Void> context)>>,
                  ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_end_of_file_callback');
  late final _XIMU3_connection_add_end_of_file_callback =
      _XIMU3_connection_add_end_of_file_callbackPtr.asFunction<
          int Function(
              ffi.Pointer<XIMU3_Connection>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(ffi.Pointer<ffi.Void> context)>>,
              ffi.Pointer<ffi.Void>)>();

  void XIMU3_connection_remove_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    int callback_id,
  ) {
    return _XIMU3_connection_remove_callback(
      connection,
      callback_id,
    );
  }

  late final _XIMU3_connection_remove_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<XIMU3_Connection>,
              ffi.Uint64)>>('XIMU3_connection_remove_callback');
  late final _XIMU3_connection_remove_callback =
      _XIMU3_connection_remove_callbackPtr.asFunction<
          void Function(ffi.Pointer<XIMU3_Connection>, int)>();

  ffi.Pointer<ffi.Char> XIMU3_usb_connection_info_to_string(
    XIMU3_UsbConnectionInfo connection_info,
  ) {
    return _XIMU3_usb_connection_info_to_string(
      connection_info,
    );
  }

  late final _XIMU3_usb_connection_info_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_UsbConnectionInfo)>>('XIMU3_usb_connection_info_to_string');
  late final _XIMU3_usb_connection_info_to_string =
      _XIMU3_usb_connection_info_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_UsbConnectionInfo)>();

  ffi.Pointer<ffi.Char> XIMU3_serial_connection_info_to_string(
    XIMU3_SerialConnectionInfo connection_info,
  ) {
    return _XIMU3_serial_connection_info_to_string(
      connection_info,
    );
  }

  late final _XIMU3_serial_connection_info_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_SerialConnectionInfo)>>(
      'XIMU3_serial_connection_info_to_string');
  late final _XIMU3_serial_connection_info_to_string =
      _XIMU3_serial_connection_info_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_SerialConnectionInfo)>();

  ffi.Pointer<ffi.Char> XIMU3_tcp_connection_info_to_string(
    XIMU3_TcpConnectionInfo connection_info,
  ) {
    return _XIMU3_tcp_connection_info_to_string(
      connection_info,
    );
  }

  late final _XIMU3_tcp_connection_info_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_TcpConnectionInfo)>>('XIMU3_tcp_connection_info_to_string');
  late final _XIMU3_tcp_connection_info_to_string =
      _XIMU3_tcp_connection_info_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_TcpConnectionInfo)>();

  ffi.Pointer<ffi.Char> XIMU3_udp_connection_info_to_string(
    XIMU3_UdpConnectionInfo connection_info,
  ) {
    return _XIMU3_udp_connection_info_to_string(
      connection_info,
    );
  }

  late final _XIMU3_udp_connection_info_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_UdpConnectionInfo)>>('XIMU3_udp_connection_info_to_string');
  late final _XIMU3_udp_connection_info_to_string =
      _XIMU3_udp_connection_info_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_UdpConnectionInfo)>();

  ffi.Pointer<ffi.Char> XIMU3_bluetooth_connection_info_to_string(
    XIMU3_BluetoothConnectionInfo connection_info,
  ) {
    return _XIMU3_bluetooth_connection_info_to_string(
      connection_info,
    );
  }

  late final _XIMU3_bluetooth_connection_info_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_BluetoothConnectionInfo)>>(
      'XIMU3_bluetooth_connection_info_to_string');
  late final _XIMU3_bluetooth_connection_info_to_string =
      _XIMU3_bluetooth_connection_info_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_BluetoothConnectionInfo)>();

  ffi.Pointer<ffi.Char> XIMU3_file_connection_info_to_string(
    XIMU3_FileConnectionInfo connection_info,
  ) {
    return _XIMU3_file_connection_info_to_string(
      connection_info,
    );
  }

  late final _XIMU3_file_connection_info_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_FileConnectionInfo)>>(
      'XIMU3_file_connection_info_to_string');
  late final _XIMU3_file_connection_info_to_string =
      _XIMU3_file_connection_info_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_FileConnectionInfo)>();

  ffi.Pointer<ffi.Char> XIMU3_connection_type_to_string(
    int connection_type,
  ) {
    return _XIMU3_connection_type_to_string(
      connection_type,
    );
  }

  late final _XIMU3_connection_type_to_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'XIMU3_connection_type_to_string');
  late final _XIMU3_connection_type_to_string =
      _XIMU3_connection_type_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(int)>();

  ffi.Pointer<XIMU3_DataLogger> XIMU3_data_logger_new(
    ffi.Pointer<ffi.Char> destination,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Pointer<XIMU3_Connection>> connections,
    int length,
  ) {
    return _XIMU3_data_logger_new(
      destination,
      name,
      connections,
      length,
    );
  }

  late final _XIMU3_data_logger_newPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<XIMU3_DataLogger> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<XIMU3_Connection>>,
              ffi.Uint32)>>('XIMU3_data_logger_new');
  late final _XIMU3_data_logger_new = _XIMU3_data_logger_newPtr.asFunction<
      ffi.Pointer<XIMU3_DataLogger> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<XIMU3_Connection>>,
          int)>();

  void XIMU3_data_logger_free(
    ffi.Pointer<XIMU3_DataLogger> data_logger,
  ) {
    return _XIMU3_data_logger_free(
      data_logger,
    );
  }

  late final _XIMU3_data_logger_freePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<XIMU3_DataLogger>)>>(
      'XIMU3_data_logger_free');
  late final _XIMU3_data_logger_free = _XIMU3_data_logger_freePtr.asFunction<
      void Function(ffi.Pointer<XIMU3_DataLogger>)>();

  int XIMU3_data_logger_get_result(
    ffi.Pointer<XIMU3_DataLogger> data_logger,
  ) {
    return _XIMU3_data_logger_get_result(
      data_logger,
    );
  }

  late final _XIMU3_data_logger_get_resultPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int32 Function(ffi.Pointer<XIMU3_DataLogger>)>>(
      'XIMU3_data_logger_get_result');
  late final _XIMU3_data_logger_get_result = _XIMU3_data_logger_get_resultPtr
      .asFunction<int Function(ffi.Pointer<XIMU3_DataLogger>)>();

  int XIMU3_data_logger_log(
    ffi.Pointer<ffi.Char> destination,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Pointer<XIMU3_Connection>> connections,
    int length,
    int seconds,
  ) {
    return _XIMU3_data_logger_log(
      destination,
      name,
      connections,
      length,
      seconds,
    );
  }

  late final _XIMU3_data_logger_logPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<XIMU3_Connection>>,
              ffi.Uint32,
              ffi.Uint32)>>('XIMU3_data_logger_log');
  late final _XIMU3_data_logger_log = _XIMU3_data_logger_logPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<XIMU3_Connection>>, int, int)>();

  ffi.Pointer<ffi.Char> XIMU3_inertial_message_to_string(
    XIMU3_InertialMessage message,
  ) {
    return _XIMU3_inertial_message_to_string(
      message,
    );
  }

  late final _XIMU3_inertial_message_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_InertialMessage)>>('XIMU3_inertial_message_to_string');
  late final _XIMU3_inertial_message_to_string =
      _XIMU3_inertial_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_InertialMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_magnetometer_message_to_string(
    XIMU3_MagnetometerMessage message,
  ) {
    return _XIMU3_magnetometer_message_to_string(
      message,
    );
  }

  late final _XIMU3_magnetometer_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_MagnetometerMessage)>>(
      'XIMU3_magnetometer_message_to_string');
  late final _XIMU3_magnetometer_message_to_string =
      _XIMU3_magnetometer_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_MagnetometerMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_quaternion_message_to_string(
    XIMU3_QuaternionMessage message,
  ) {
    return _XIMU3_quaternion_message_to_string(
      message,
    );
  }

  late final _XIMU3_quaternion_message_to_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              XIMU3_QuaternionMessage)>>('XIMU3_quaternion_message_to_string');
  late final _XIMU3_quaternion_message_to_string =
      _XIMU3_quaternion_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_QuaternionMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_rotation_matrix_message_to_string(
    XIMU3_RotationMatrixMessage message,
  ) {
    return _XIMU3_rotation_matrix_message_to_string(
      message,
    );
  }

  late final _XIMU3_rotation_matrix_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_RotationMatrixMessage)>>(
      'XIMU3_rotation_matrix_message_to_string');
  late final _XIMU3_rotation_matrix_message_to_string =
      _XIMU3_rotation_matrix_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_RotationMatrixMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_euler_angles_message_to_string(
    XIMU3_EulerAnglesMessage message,
  ) {
    return _XIMU3_euler_angles_message_to_string(
      message,
    );
  }

  late final _XIMU3_euler_angles_message_to_stringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(XIMU3_EulerAnglesMessage)>>(
      'XIMU3_euler_angles_message_to_string');
  late final _XIMU3_euler_angles_message_to_string =
      _XIMU3_euler_angles_message_to_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(XIMU3_EulerAnglesMessage)>();

  ffi.Pointer<ffi.Char> XIMU3_linear_acceleration_message_to_string(
    XIMU3_LinearAccelerationMessage message,
  ) {
    return _XIMU3_linear_acceleration_message_to_string(
      message,
    );
  }
